feat: done all additional tasks
