# internal/http/team_handlers.go
@@ -3,35 +3,27 @@ package http
 import (
 	"context"
 	"encoding/json"
-	"errors"
 	"net/http"
 
 	"github.com/cloudyy74/pr-reviewer-service/internal/models"
-	"github.com/cloudyy74/pr-reviewer-service/internal/service"
 )
 
 type TeamService interface {
 	CreateTeam(context.Context, *models.Team) (*models.Team, error)
 	GetTeamUsers(context.Context, string) ([]*models.User, error)
+	DeactivateTeamUsers(context.Context, string) (*models.TeamDeactivateResponse, error)
 }
 
 func (rtr *router) createTeam(w http.ResponseWriter, r *http.Request) {
 	var team models.Team
 	if err := json.NewDecoder(r.Body).Decode(&team); err != nil {
-		rtr.responseError(w, http.StatusBadRequest, ErrCodeBadRequest, "bad json request")
+		rtr.handleError(w, newResponseError(ErrCodeBadRequest, "bad json request"))
 		return
 	}
 
 	createdTeam, err := rtr.teamService.CreateTeam(r.Context(), &team)
 	if err != nil {
-		switch {
-		case errors.Is(err, service.ErrTeamExists):
-			rtr.responseError(w, http.StatusBadRequest, ErrCodeTeamExists, "team_name already exists")
-		case errors.Is(err, service.ErrTeamValidation):
-			rtr.responseError(w, http.StatusBadRequest, ErrCodeValidation, err.Error())
-		default:
-			rtr.responseError(w, http.StatusInternalServerError, ErrCodeInternal, "internal error")
-		}
+		rtr.handleError(w, err)
 		return
 	}
 
@@ -45,14 +37,7 @@ func (rtr *router) getTeam(w http.ResponseWriter, r *http.Request) {
 	teamName := r.URL.Query().Get("team_name")
 	users, err := rtr.teamService.GetTeamUsers(r.Context(), teamName)
 	if err != nil {
-		switch {
-		case errors.Is(err, service.ErrTeamNotFound):
-			rtr.responseError(w, http.StatusNotFound, ErrCodeNotFound, "resource not found")
-		case errors.Is(err, service.ErrTeamValidation):
-			rtr.responseError(w, http.StatusBadRequest, ErrCodeValidation, errors.Unwrap(err).Error())
-		default:
-			rtr.responseError(w, http.StatusInternalServerError, ErrCodeInternal, "internal error")
-		}
+		rtr.handleError(w, err)
 		return
 	}
 
@@ -61,4 +46,18 @@ func (rtr *router) getTeam(w http.ResponseWriter, r *http.Request) {
 		Members: users,
 	}
 	rtr.responseJSON(w, http.StatusOK, response)
+}
+
+func (rtr *router) deactivateTeamUsers(w http.ResponseWriter, r *http.Request) {
+	var req models.TeamDeactivateRequest
+	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
+		rtr.handleError(w, newResponseError(ErrCodeBadRequest, "bad json request"))
+		return
+	}
+	resp, err := rtr.teamService.DeactivateTeamUsers(r.Context(), req.TeamName)
+	if err != nil {
+		rtr.handleError(w, err)
+		return
+	}
+	rtr.responseJSON(w, http.StatusOK, resp)
 }
