# internal/models/ping.go
@@ -1,0 +1,6 @@
+package models
+
+type PingResponse struct {
+	Status  string `json:"status"`
+	Message string `json:"message"`
+}
