# internal/models/team.go
@@ -8,3 +8,12 @@ type Team struct {
 type TeamResponse struct {
 	Team Team `json:"team"`
 }
+
+type TeamDeactivateRequest struct {
+	TeamName string `json:"team_name"`
+}
+
+type TeamDeactivateResponse struct {
+	TeamName         string `json:"team_name"`
+	DeactivatedCount int    `json:"deactivated_count"`
+}
